# satysfi-parser

./: Cargo.toml  HISTORY.md  README.md  about-satysfi-grammar.md
benches/: packrat.rs
examples/: comment_in_japanese.rs  example1.saty  parse_all_files_in_dist.rs
src/: grammar.rs  lib.rs  main.rs  satysfi.pest  tests.rs  types.rs
src/tests/: commands.rs  constant.rs  expr.rs  header.rs  horizontal.rs  literal.rs  math.rs  pattern.rs  statement.rs  term.rs  types.rs  unary.rs  util.rs  vertical.rs
src/types/: rule.rs  structure.rs
