[package]
name = "satysfi-parser"
version = "0.1.0"
authors = ["monaqa <mogassy@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
itertools = "0.10.0"
log = "0.4.14"
pest = "2.1.3"
pest_derive = "2.1.0"
thiserror = "1.0.24"
