[package]
name = "satysfi-parser"
version = "0.1.0"
authors = ["monaqa <mogassy@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
itertools = "0.10.0"
log = "0.4.14"
peg = "0.6.3"
structopt = "0.3.21"
thiserror = "1.0.24"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "packrat"
harness = false
