[package]
edition = "2018"
name = "satysfi-parser"
version = "0.0.3"
authors = ["Mogami Shinichi <mogassy@yahoo.co.jp>"]
license = "MIT"
repository = "https://github.com/monaqa/satysfi-parser"
documentation = "https://docs.rs/satysfi-parser"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["parser", "SATySFi", "peg"]
description = """
SATySFi parser written in Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
glob = "0.3.0"
itertools = "0.10.0"
log = "0.4.14"
peg = "0.7.0"
structopt = "0.3.21"
thiserror = "1.0.24"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "packrat"
harness = false
